Server should run correctly now

--- a/blog/views/blog-home.ejs
+++ b/blog/views/blog-home.ejs
@@ -41,10 +41,10 @@
     <script src="https://cdn.jsdelivr.net/npm/showdown@2.1.0/dist/showdown.min.js"></script>
 
     <!-- Custom Javascript, implements event handlers, animation, etc. -->
-    <script src="static/js/blog.js"></script>
+    <script src="static/blog.js"></script>
 
     <!-- CSS stylesheet -->
-    <link rel="stylesheet" type="text/css" href="static/css/blog.css">
+    <link rel="stylesheet" type="text/css" href="static/blog.css">
 
 </head>
 
