--- a/blog/views/blog-home.ejs
+++ b/blog/views/blog-home.ejs
@@ -41,10 +41,10 @@
     <script src="https://cdn.jsdelivr.net/npm/showdown@2.1.0/dist/showdown.min.js"></script>
 
     <!-- Custom Javascript, implements event handlers, animation, etc. -->
-    <script src="static/blog.js"></script>
+    <script src="/static/blog.js"></script>
 
     <!-- CSS stylesheet -->
-    <link rel="stylesheet" type="text/css" href="static/blog.css">
+    <link rel="stylesheet" type="text/css" href="/static/blog.css">
 
 </head>
 
@@ -54,7 +54,7 @@
 <div id="header-bar">
 
     <!-- Main logo -->
-    <img id="header-logo" src="static/img/partly_gloudy_logo_black.png" alt="" />
+    <img id="header-logo" src="/static/img/partly_gloudy_logo_black.png" alt="" />
 
     <!-- Nav bar to other site pages -->
     <div id="header-nav-bar">
@@ -72,6 +72,7 @@
 
         <!-- Contents of the current article are loaded separately  -->
         <!-- They should be appended below here  -->
+        <%- postHtml %>
 
     </div>
 
