Formatting improvements, automatically add permalinks

--- a/blog/views/blog-home.ejs
+++ b/blog/views/blog-home.ejs
@@ -37,9 +37,6 @@
     <!-- JQuery (loaded from Google hosted libraries) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 
-    <!-- Showdown markdown renderer -->
-    <script src="https://cdn.jsdelivr.net/npm/showdown@2.1.0/dist/showdown.min.js"></script>
-
     <!-- Custom Javascript, implements event handlers, animation, etc. -->
     <script src="/static/blog.js"></script>
 
@@ -56,19 +53,13 @@
     <!-- Main logo -->
     <img id="header-logo" src="/static/img/partly_gloudy_logo_black.png" alt="" />
 
-    <!-- Nav bar to other site pages -->
-    <div id="header-nav-bar">
-        <a class="header-nav-link" href="/about">About</a>
-        <a class="header-nav-link" href="/projects">Projects</a>
-    </div>
-
 </div>
 
 <!-- Main content - current post and archive panel -->
 <div id="main-content">
 
     <!-- Current blog post - left side of screen -->
-    <div id="current-post-wrapper">
+    <div id="post-bucket">
 
         <!-- Contents of the current article are loaded separately  -->
         <!-- They should be appended below here  -->
