--- a/blog/static/blog.css
+++ b/blog/static/blog.css
@@ -88,46 +88,86 @@ a:link, a:visited, a:active {
     align-items: start;
 }
 
-#current-post-wrapper {
+#post-bucket {
     width: 70%;
     max-width: 800px;
     height: 100vh;
-    padding: 25px 5% 5% 20%;
+    padding: 25px 5% 5% 5%;
 }
 
 #archive-panel {
     width: 30%;
     padding: 40px;
-    max-width: 350px;
-    min-width: 280px;
+    max-width: 280px;
+    min-width: 225px;
     height: 100vh;
     background: var(--color-primary);
     color: var(--font-color-primary);
 }
 
 
-/* ------------------------------ */
-/* ---  Current post layout ----- */
-/* ------------------------------ */
+/* ------------------------------------ */
+/* ---  Blog post element styling ----- */
+/* ------------------------------------ */
 
 
-#current-post-title {
+.post {
+    width: 100%;
+    border-bottom: 1px solid black;
+    padding-bottom: 50px;
+    margin-bottom: 50px;
+}
+
+.post-final {
+    border-bottom: none;
+}
+
+.post h1 {
     font-size: 2.0rem;
     margin-bottom: 15px;
 }
 
-#current-post-date {
+.post h2 {
+    font-size: 1.6rem;
+    margin-bottom: 10px;
+}
+
+.post h3 {
+    font-size: 1.4rem;
+    margin-bottom: 8px;
+}
+
+.post h4 {
     font-size: 0.9rem;
     margin-bottom: 30px;
 }
 
-#current-post-content {
-}
-
-.current-post-p {
+.post p {
     font-size: 1.3rem;
     line-height: 28px;
 }
+
+.post a {
+    text-decoration: underline;
+}
+
+.post a:hover {
+    background: black;
+    color: white;
+    text-decoration: underline;
+}
+
+.post h1 a {
+    text-decoration: none;
+}
+
+.post ol {
+}
+
+.post li {
+}
+
+
 
 /* -------------------------------- */
 /* ---  Archive panel ------------- */
@@ -159,6 +199,25 @@ a:link, a:visited, a:active {
 
 .archive-panel-section a:hover {
     text-decoration: underline;
+}
+
+
+/* -------------------------------- */
+/* ---  Narrow Screens ------------ */
+/* -------------------------------- */
+
+
+@media only screen and (max-width: 1000px) {
+
+    #post-bucket {
+        width: 90%;
+        padding: 25px 0;
+    }
+
+    #archive-panel {
+        display: none;
+    }
+
 }
 
 
