--- a/blog/views/blog-home.ejs
+++ b/blog/views/blog-home.ejs
@@ -4,7 +4,7 @@
 <head>
 
     <!-- Page title, text displayed in browser tab-->
-    <title>Jake Gloudemans</title>
+    <title>Blog - Jake Gloudemans</title>
 
     <!-- Metadata-->
     <meta charset="UTF-8">
@@ -51,7 +51,10 @@
 <div id="header-bar">
 
     <!-- Main logo -->
-    <img id="header-logo" src="/static/img/partly_gloudy_logo_black.png" alt="" />
+    <img id="header-logo" src="/static/img/logo.svg" alt="" />
+
+    <!-- Title / my name -->
+    <h1 id="header-title">Jake Gloudemans</h1>
 
 </div>
 
