--- a/blog/views/main.ejs
+++ b/blog/views/main.ejs
@@ -4,40 +4,40 @@
 <head>
 
     <!-- Page title, text displayed in browser tab-->
-    <title>Blog - Jake Gloudemans</title>
+    <title><%= title %></title>
 
     <!-- Metadata-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="<%= description %>">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Jake Gloudemans">
-    <meta property="og:url" content="">
-    <meta property="og:description" content="">
-    <meta property="og:image" content="">
+    <meta property="og:title" content="<%= title %>">
+    <meta property="og:url" content="<%= pageUrl %>">
+    <meta property="og:description" content="<%= description %>">
+    <meta property="og:image" content="<%= imgUrl %>">
 
     <!-- Twitter card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@partlygloudy">
     <meta name="twitter:creator" content="@partlygloudy">
-    <meta name="twitter:title" content="Jake Gloudemans">
-    <meta name="twitter:description" content="">
-    <meta name="twitter:image" content="">
+    <meta name="twitter:title" content="<%= title %>">
+    <meta name="twitter:description" content="<%= description %>">
+    <meta name="twitter:image" content="<%= imgUrl %>">
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
-    <!-- Fonts (loaded from Google fonts) -->
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
-    <!-- JQuery (loaded from Google hosted libraries) -->
+    <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 
-    <!-- Custom Javascript, implements event handlers, animation, etc. -->
+    <!-- Custom JS -->
     <script src="/static/blog.js"></script>
 
     <!-- CSS stylesheet -->
@@ -56,6 +56,12 @@
     <!-- Name -->
     <h1 id="header-title">Jake Gloudemans</h1>
 
+    <!-- Buttons to show / hide side panel on narrow view -->
+    <div id="menu-button-wrapper">
+        <div class="menu-button" id="menu-button-open">menu</div>
+        <div class="menu-button hidden" id="menu-button-close">hide</div>
+    </div>
+
 </div>
 
 <!-- Main content - current post and archive panel -->
@@ -64,17 +70,18 @@
     <!-- Current blog post - left side of screen -->
     <div id="post-bucket">
 
-        <%- postsHtml %>
+        <%- mainContent %>
 
     </div>
 
     <!-- Archive panel with links to posts and other blogs and publications -->
-    <div id="archive-panel">
+    <div id="archive-panel" class="hidden">
 
         <!-- Panel showing recent blog posts - populated by js on page load -->
         <div class="archive-panel-section">
             <h2 class="archive-panel-header">Recent Posts</h2>
             <ul class="archive-panel-link-list" id="archive-panel-recent"></ul>
+            <p id="archive-link"><a href="/archive">-- See Full Archive --</a></p>
         </div>
 
         <!-- Panel linking to recommended blogs - populated by js on page load -->
@@ -89,6 +96,15 @@
             <ul class="archive-panel-link-list" id="archive-panel-pubs"></ul>
         </div>
 
+    </div>
+
+</div>
+
+<!-- Footer -->
+<div id="footer">
+
+    <div id="copyright-text">
+        <span>&copy; 2023 Jake Gloudemans</span>
     </div>
 
 </div>
