--- a/blog/views/main.ejs
+++ b/blog/views/main.ejs
@@ -86,13 +86,13 @@
 
         <!-- Panel linking to recommended blogs - populated by js on page load -->
         <div class="archive-panel-section">
-            <h2 class="archive-panel-header">Blogs I Like</h2>
+            <h2 class="archive-panel-header">Recommended Blogs</h2>
             <ul class="archive-panel-link-list" id="archive-panel-blogs"></ul>
         </div>
 
         <!-- Panel linking to recommended publications - populated by js on page load -->
         <div class="archive-panel-section">
-            <h2 class="archive-panel-header">Publications I Like</h2>
+            <h2 class="archive-panel-header">Recommended Publications</h2>
             <ul class="archive-panel-link-list" id="archive-panel-pubs"></ul>
         </div>
 
