--- a/blog/static/blog.css
+++ b/blog/static/blog.css
@@ -136,7 +136,7 @@ a:link, a:visited, a:active {
 #archive-panel {
     width: 30%;
     padding: 40px;
-    max-width: 280px;
+    max-width: 300px;
     min-width: 225px;
     min-height: 100vh;
     background: var(--color-primary);
@@ -166,12 +166,12 @@ a:link, a:visited, a:active {
 }
 
 .post h2 {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     margin-bottom: 10px;
 }
 
 .post h3 {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     margin-bottom: 8px;
 }
 
@@ -207,10 +207,14 @@ a:link, a:visited, a:active {
 
 .post ol {
     font-size: 1.3rem;
-    line-height: 35px;
+}
+
+.post ul {
+    font-size: 1.3rem;
 }
 
 .post li {
+    margin-bottom: 10px;
 }
 
 .post blockquote {
@@ -222,6 +226,31 @@ a:link, a:visited, a:active {
 .post blockquote p {
     font-size: 1.0rem;
     color: rgb(100,100,100);
+}
+
+.post img {
+    width: 100%;
+}
+
+.post .youtube-video-outer {
+    width: 80%;
+    margin: 30px auto;
+}
+
+.post .youtube-video-wrapper {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; /* for 16:9 aspect ratio */
+    height: 0;
+
+}
+
+.post .youtube-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -251,6 +280,7 @@ a:link, a:visited, a:active {
 
 .archive-panel-link-list {
     margin-top: 0;
+    padding-right: 10px;
 }
 
 .archive-panel-section a:hover {
@@ -320,6 +350,10 @@ a:link, a:visited, a:active {
 
     .hidden {
         display: none;
+    }
+
+    .post .youtube-video-outer {
+        width: 100%;
     }
 
 }
