--- a/blog/static/blog.css
+++ b/blog/static/blog.css
@@ -260,6 +260,15 @@ a:link, a:visited, a:active {
     text-align: center;
 }
 
+.post .metaculus-embed {
+    height:350px;
+    width: 550px;
+    max-width:100%;
+    border: none;
+    display: block;
+    margin: 30px 0;
+}
+
 /* -------------------------------- */
 /* ---  Archive panel ------------- */
 /* -------------------------------- */
