--- a/static/css/index.css
+++ b/static/css/index.css
@@ -29,6 +29,7 @@ body {
     width: 80%;
     max-width: 1000px;
     display: none;
+    padding-bottom: 100px;
 }
 
 #blurb-wrapper-inner {
@@ -79,6 +80,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-bottom: 100px;
 }
 
 .icon {
@@ -140,13 +142,18 @@ body {
 
 @media only screen and (max-width: 750px) {
 
+    body {
+        justify-content: start;
+    }
+
     #name-text {
-        margin-bottom: 60px;
+        margin-top: 50px;
+        margin-bottom: 40px;
     }
 
     #blurb-wrapper {
         width: 100%;
-        padding: 50px 0;
+        padding: 30px 0;
     }
 
     #blurb-wrapper-inner {
@@ -154,8 +161,8 @@ body {
     }
 
     #blurb-img-wrapper {
-        height: 200px;
-        min-width: 200px;
+        height: 175px;
+        min-width: 175px;
         margin-bottom: 40px;
         overflow: hidden;
         position: relative;
@@ -170,6 +177,7 @@ body {
 
     #icon-wrapper {
         flex-direction: column;
+        padding-bottom: 0;
     }
 
     .icon:not(#icon-about, #icon-projects) {
