fix back arrow cache issue

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -147,8 +147,7 @@ body {
     }
 
     #name-text {
-        margin-top: 50px;
-        margin-bottom: 40px;
+        margin: 40px 0;
     }
 
     #blurb-wrapper {
