--- a/static/css/index.css
+++ b/static/css/index.css
@@ -147,7 +147,8 @@ body {
     }
 
     #name-text {
-        margin: 40px 0;
+        margin-top: 50px;
+        margin-bottom: 40px;
     }
 
     #blurb-wrapper {
