--- a/blog/static/blog.css
+++ b/blog/static/blog.css
@@ -163,6 +163,7 @@ a:link, a:visited, a:active {
 
 .post h2 {
     font-size: 1.4rem;
+    margin-top: 50px;
     margin-bottom: 10px;
 }
 
@@ -228,6 +229,12 @@ a:link, a:visited, a:active {
     width: 100%;
 }
 
+.post iframe {
+    width: 100%;
+    height: 500px;
+    border: none;
+}
+
 .post .youtube-video-outer {
     width: 80%;
     margin: 30px auto;
@@ -267,6 +274,31 @@ a:link, a:visited, a:active {
     border: none;
     display: block;
     margin: 30px 0;
+}
+
+.post .table-padding {
+    padding: 20px;
+    width: fit-content;
+    background-color: white;
+}
+
+.post table {
+    border-collapse: collapse;
+}
+
+.post table thead {
+    font-weight: bold;
+}
+
+.post table thead td {
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+}
+
+.post table td {
+    width: 100px;
+    height: 35px;
+    text-align: center;
 }
 
 /* -------------------------------- */
