--- a/blog/static/blog.css
+++ b/blog/static/blog.css
@@ -265,6 +265,7 @@ a:link, a:visited, a:active {
     width: 80%;
     margin: auto;
     text-align: center;
+    color: rgb(125,125,125);
 }
 
 .post .metaculus-embed {
