--- a/blog/static/blog.css
+++ b/blog/static/blog.css
@@ -280,6 +280,11 @@ a:link, a:visited, a:active {
     box-shadow: 0 0 1px 0 rgb(0,0,0,0.5);
 }
 
+.post .mychart-embed {
+    width: 100%;
+    height: 725px;
+}
+
 .post .table-padding {
     padding: 20px;
     width: fit-content;
@@ -294,6 +299,8 @@ a:link, a:visited, a:active {
     box-shadow: 0 0 1px 0 rgb(0,0,0,0.5);
     font-family: monospace;
     color: rgb(75, 75, 75);
+    max-width: 100%;
+    overflow: scroll;
 }
 
 .post table thead {
