--- a/blog/static/blog.css
+++ b/blog/static/blog.css
@@ -173,7 +173,7 @@ a:link, a:visited, a:active {
 
 .post h4 {
     font-size: 0.9rem;
-    margin: 0 0 30px 10px;
+    margin: 0 0 30px 0;
     color: rgb(125, 125, 125);
     font-weight: normal;
 }
