added support for multiple image widths

--- a/blog/static/blog.css
+++ b/blog/static/blog.css
@@ -233,6 +233,18 @@ a:link, a:visited, a:active {
     width: 100%;
 }
 
+.post img.width-medium {
+    width: 75%;
+    display: block;
+    margin: auto;
+}
+
+.post img.width-narrow {
+    width: 50%;
+    display: block;
+    margin: auto;
+}
+
 .post iframe {
     width: 100%;
     height: 500px;
@@ -463,6 +475,28 @@ a:link, a:visited, a:active {
 
     .post .metaculus-embed {
         height:500px;
+    }
+
+    .post img.width-medium {
+        width: 90%;
+    }
+
+    .post img.width-narrow {
+        width: 70%;
+    }
+
+}
+
+
+
+@media only screen and (max-width: 800px) {
+
+    .post img.width-medium {
+        width: 100%;
+    }
+
+    .post img.width-narrow {
+        width: 100%;
     }
 
 }
