--- a/blog/views/main.ejs
+++ b/blog/views/main.ejs
@@ -98,6 +98,12 @@
             <ul class="archive-panel-link-list" id="archive-panel-pubs"></ul>
         </div>
 
+        <!-- Panel linking to recommended podcasts - populated by js on page load -->
+        <div class="archive-panel-section">
+            <h2 class="archive-panel-header">Recommended Podcasts</h2>
+            <ul class="archive-panel-link-list" id="archive-panel-podcasts"></ul>
+        </div>
+
     </div>
 
 </div>
@@ -106,7 +112,7 @@
 <div id="footer">
 
     <div id="copyright-text">
-        <span>&copy; 2023 Jake Gloudemans</span>
+        <span>&copy; 2026 Jake Gloudemans</span>
     </div>
 
 </div>
